--- a/index.html
+++ b/index.html
@@ -158,6 +158,7 @@
         <a href="#services">Услуги</a>
         <a href="#featured">Сите возила</a>
         <a href="#contact">Контакт</a>
+        <a href="#contact">Test</a>
     </nav>
 
     <div id="mobile">
