--- a/index.html
+++ b/index.html
@@ -8,14 +8,33 @@
     <title>Автоцентар</title>
     <meta name="description" content="Најдобра понуда на половни возила со комплетна сервисна историја и 
         гаранција од брендовите Mercedes-Benz, BMW, Volkswagen, Peugeot, Renault..">
-    <meta name="keywords" content="автоцентар, авто делови, Македонија, автомобили" />
+    <meta name="keywords" content="autocentar, шеќер, AvtoCentar, AutoCentar, автоцентар, авто делови, Македонија, автомобили" />
     <meta name="author" content="Автоцентар" />
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+    <meta name="language" content="mk">
+
+    <!-- Canonical -->
+    <link rel="canonical" href="https://www.avtocentar.mk/">
+
+    <!-- Open Graph Meta Tags -->
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="Автоцентар">
+    <meta property="og:description" content="Најдобра понуда на половни возила со комплетна сервисна историја и гаранција.">
+    <meta property="og:image" content="https://www.avtocentar.mk/images/og-image.png"> 
+    <meta property="og:url" content="https://www.avtocentar.mk/">
+    <meta property="og:site_name" content="Автоцентар">
+    <meta property="og:locale" content="mk_MK">
+
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"/>
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css">
     
 <link rel="apple-touch-icon" sizes="180x180" href="/images/apple-touch-icon.png">
+<link rel="icon" type="image/svg+xml" href="/images/favicon-svg.svg">
+<link rel="icon" type="image/png" sizes="512x512" href="/images/favicon-512x512.png">
+<link rel="icon" type="image/png" sizes="192x192" href="/images/favicon-192x192.png">
+<link rel="icon" type="image/png" sizes="96x96" href="/images/favicon-96x96.png">
 <link rel="icon" type="image/png" sizes="32x32" href="/images/favicon-32x32.png">
 <link rel="icon" type="image/png" sizes="16x16" href="/images/favicon-16x16.png">
 <link rel="icon" type="image/x-icon" href="/favicon.ico">
@@ -145,6 +164,20 @@
             }
         }
     </style>
+        <script type="application/ld+json">
+            {
+              "@context": "https://schema.org",
+              "@type": "AutoDealer",
+              "name": "Автоцентар",
+              "image": "https://www.avtocentar.mk/images/og-image.png",
+              "description": "Најдобра понуда на половни возила со комплетна сервисна историја и гаранција.",
+              "address": {
+                "@type": "PostalAddress",
+                "addressCountry": "MK"
+              },
+              "url": "https://www.avtocentar.mk/"
+            }
+            </script>
 
 </head>
 <body>
